--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,8 @@
 .header-area {
   text-align: center;
+  margin: 0 5rem;
+  padding-bottom: 2rem;
+  border-bottom: 2px solid #232832;
 }
 
 .header-area h1 {
