--- a/src/components/Hall/Hall.css
+++ b/src/components/Hall/Hall.css
@@ -2,6 +2,7 @@
   margin-top: 4rem;
   margin-left: 3rem;
   margin-bottom: 3rem;
+  font-family: "B612 Mono", monospace;
   display: grid;
   grid-template-columns: 3fr 1fr;
   gap: 1rem;
