--- a/src/components/Robot/Robot.css
+++ b/src/components/Robot/Robot.css
@@ -2,6 +2,7 @@
   padding: 2rem 1rem;
   text-align: center;
   border-radius: 5px;
+  line-height: 1.3;
   box-shadow: 12px 15px 30px -12px rgba(30, 30, 60, 0.25);
   transition: all 0.3s ease-in;
 }
@@ -40,10 +41,17 @@
 button {
   margin-top: 2rem;
   padding: 0.7rem 3rem;
+  font-family: "B612 Mono", monospace;
   color: #fefeff;
   background-color: #e23e58;
   border: none;
   font-size: 1rem;
+  font-weight: bold;
   border-radius: 5px;
   cursor: pointer;
+  transition: all 0.3s ease-in;
+}
+
+button:hover {
+  background-color: #e92a4a;
 }
