--- a/src/components/Robot/Robot.css
+++ b/src/components/Robot/Robot.css
@@ -1,13 +1,10 @@
+/* Robot card styling */
 .robot {
   padding: 2rem 1rem;
   text-align: center;
   border-radius: 5px;
   line-height: 1.3;
   box-shadow: 12px 15px 30px -12px rgba(30, 30, 60, 0.25);
-}
-
-.robot:hover img {
-  transform: scale(1.2);
 }
 
 .robot img {
@@ -17,12 +14,14 @@
   transition: all 0.4s ease-in;
 }
 
+/* Robot's full name */
 .robot .robo-name {
   color: #e23e58;
   font-family: "Gugi", cursive;
   font-size: 1.5rem;
 }
 
+/* Robot's information */
 .robot .robo-info {
   display: flex;
   justify-content: space-around;
@@ -52,13 +51,18 @@ button {
   transition: all 0.4s ease-in;
 }
 
-button:hover {
-  background-color: #e92a4a;
-}
-
 .btn-icon {
   display: inline-block;
   transition: all 0.2s ease-in-out;
+}
+
+/* Mouse hover styles */
+.robot:hover img {
+  transform: scale(1.2);
+}
+
+button:hover {
+  background-color: #e92a4a;
 }
 
 button:hover .btn-icon {
